[project]
name = "grebase"
version = "0.1.0"
description = "Safe, rule-based Git rebase assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Grebase Contributors" }
]
keywords = ["git", "rebase", "cli", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "prompt_toolkit>=3.0.43",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grebase*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.9.0",
]

[project.scripts]
grebase = "grebase.cli:app"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '^(.*[/\\\\](examples|tests[/\\\\]fixtures|\.venv|\.git|\.ruff_cache|\.pytest_cache|dist|build)[/\\\\]).*$'

[tool.ruff]
line-length = 100
exclude = [
  "examples/**",
  "tests/fixtures/**",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
